turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:47: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		setPos(8,33)
                ^Turmite:49: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		for (etat<- 0 to 1) {
                ^Turmite:67: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		return rule		
                ^